# note_review_scheduler

./: .gitignore  CHANGELOG.md  README.md  integration_test_email.html  integration_test_email.txt  pyproject.toml  requirements.txt  test_database.py  test_email_sample.html  test_email_sample.txt  test_password_fix.py
.github/workflows/: scheduled-note-review.yml
scripts/: backup_database.py  health_check.py  run_scheduled_job.py  setup_github_credentials.py  setup_github_scan.py
src/note_reviewer/: cli.py  main.py
src/note_reviewer/config/: __init__.py  logging_config.py  settings.py
src/note_reviewer/database/: __init__.py  models.py  operations.py
src/note_reviewer/database/tmp/Study/: Big O notation.txt  Connecting Data - Client to Server.txt  Context & Redux Differences.txt  ML vs DS.txt  Maven and Its Benefits for E-comm.txt  RESUMATE - RAG + Gen AI.txt  Relational vs Non-Relational.txt  What is ERD.txt  Why Use Sequelize.txt  [JAVA] Implementing New Features.txt
src/note_reviewer/email/: __init__.py  service.py  templates.py
src/note_reviewer/email/templates/: notes_review.html  notes_review.text
src/note_reviewer/scanner/: __init__.py  content_processor.py  file_scanner.py  format_handlers.py
src/note_reviewer/scheduler/: __init__.py  backup.py  monitor.py  scheduler.py
src/note_reviewer/security/: __init__.py  credentials.py  encryption.py
src/note_reviewer/selection/: __init__.py  content_analyzer.py  email_formatter.py  selection_algorithm.py  text_formatter.py
src/note_reviewer/utils/: __init__.py  file_utils.py  text_utils.py  validation_utils.py
tests/: __init__.py  integration_test_email.html  integration_test_email.txt  test_database.py  test_email_sample.html  test_email_sample.txt  test_email_system.py  test_scanner_system.py  test_scheduler_system.py  test_selection_system.py
